--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quanto de água por dia? - Sua Saúde </title>
 
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
+
     <style>
         main {
             display: flex;
@@ -18,10 +20,11 @@
 
         .container {
             flex-direction: column;
-            width: 350px;
+            width: 550px;
             border: 2px black solid;
             padding: 30px;
             text-align: center;
+            margin-bottom: 10px;
         }
 
         .container input {
@@ -40,10 +43,10 @@
         <form id="mainForm" class="container">
             <h1>Qual quantidade de água beber durante o dia?</h1>
             <input type="number" name="peso" placeholder="Peso em kg">
-            <button type="submit" id="btn">Calcular</button>
+            <button id="btn" type="button" class="btn btn-info">Info</button>
         </form>
-        <div id="result">
-
+        <div id="result" class="alert alert-success" role="alert">
+                     
         </div>
     </main>
 
