--- a/index.html
+++ b/index.html
@@ -7,41 +7,7 @@
     <title>Quanto de água por dia? - Sua Saúde </title>
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css">
-
-    <style>
-        
-        body {
-            background-color: #000;
-            color: #FFF;
-        }
-        main {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 100vw;
-            height: 100vh;
-            flex-direction: column;
-        }
-
-        .container {
-            flex-direction: column;
-            width: 550px;
-            border: 2px black solid;
-            padding: 30px;
-            text-align: center;
-            margin-bottom: 10px;
-        }
-
-        .container input {
-            margin: 8px 4em;
-        }
-
-        .container button {
-            display: block;
-            margin: 5px auto;
-        }
-    </style>
-
+    <link rel="stylesheet" href="./main.css">
 </head>
 <body>
     <main>
@@ -72,6 +38,13 @@
             Esperando o cálculo ser feito.
         </div>
     </main>
+
+    <article>
+        <h1>Qual o significado do índice IMC?</h1>
+        <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate tempore assumenda incidunt optio! Nemo distinctio alias inventore a recusandae consectetur consequuntur, doloribus asperiores expedita nisi aut illum harum nobis nihil?
+        </p>
+    </article>
 
     <script src="main.js"></script>
 </body>
