Article and table styles add

--- a/index.html
+++ b/index.html
@@ -35,28 +35,23 @@
         <p>
             Provavelmente você já deve ter ouvido que devemos tomar 2 litros de água por dia, mas até que ponto essa
             afirmação é verdadeira? Bem essa base não está totalmente errada, mas para uma resposta mais específica, é
-            necessário fazer o cálculo baseado no seu peso. Essa matemática pode variar dependendo da idade, na
-            calculadora acima foi feita no parâmetro para pessoas entre 18 e 55 anos, em caso de idade inferior é
-            adicionado mais 5ml enquanto em caso de idade superior serão removidos 5ml dos 35 anteriores.
-        </p>
-
-        <p>
-            Porém estes não são os únicos parâmetros para serem levados em consideração, outros fatores como clima e
-            prática de atividade física irão alterar essa equação.
+            necessário fazer o cálculo baseado no seu peso multiplicado por uma quantidade definida em mililitros. Porém estes não são os únicos parâmetros para serem levados em consideração, pois existem outros fatores que podem interferir nessa formúla.
         </p>
 
         <dl>
             <dt>Nível de atividade física</dt>
             <dd>
                 Quem corre todos os dias necessita de mais água do que alguém que faz caminhadas três vezes por semana.
-                Portanto, quanto mais intensa a atividade física realizada, maior a quantidade de água necessária. Também é importante tomar água durante e depois das atividades físicas.
+                Portanto, quanto mais intensa a atividade física realizada, maior a quantidade de água necessária.
+                Também é importante tomar água durante e depois das atividades físicas.
             </dd>
         </dl>
 
         <dl>
             <dt>Clima</dt>
             <dd>
-                Quem mora em cidades quentes precisa de mais água do que quem mora em locais mais frios. Também precisamos de mais água no verão, quando suamos mais e, portanto, perdemos mais água, do que no inverno.
+                Quem mora em cidades quentes precisa de mais água do que quem mora em locais mais frios. Também
+                precisamos de mais água no verão, quando suamos mais e, portanto, perdemos mais água, do que no inverno.
             </dd>
         </dl>
 
@@ -70,21 +65,65 @@
         <dl>
             <dt>Consumo de álcool</dt>
             <dd>
-                Se for ingerir álcool, procure alternar a bebida alcoólica com água. A dica é tomar um copo de água depois de cada drinque,  já que o álcool ajuda a desidratar o organismo.
+                Se for ingerir álcool, procure alternar a bebida alcoólica com água. A dica é tomar um copo de água
+                depois de cada drinque, já que o álcool ajuda a desidratar o organismo.
             </dd>
         </dl>
 
         <dl>
             <dt>Estado geral</dt>
             <dd>
-                Algumas condições físicas interferem na necessidade de água. Se você tiver febre, por exemplo, deverá aumentar a ingestão de líquidos. A mesma dica vale para quem apresentar episódios de diarreia ou vômitos. Para repor o líquido perdido, opte por caldos e sopas em vez de líquidos açucarados.
+                Algumas condições físicas interferem na necessidade de água. Se você tiver febre, por exemplo, deverá
+                aumentar a ingestão de líquidos. A mesma dica vale para quem apresentar episódios de diarreia ou
+                vômitos. Para repor o líquido perdido, opte por caldos e sopas em vez de líquidos açucarados.
             </dd>
         </dl>
 
-        <span>
-            Referências: <a href="https://drauziovarella.uol.com.br/alimentacao/5-motivos-para-nao-deixar-de-tomar-agua/#:~:text=A%20quantidade%20de%20%C3%A1gua%20que,Todo%20dia.">Drauzio Varela</a>.
-        </span>
+        <dl>
+            <dt>Idade</dt>
+            <dd>
+                A fórmula anterior foi feita baseada na recomendação para pessoas entre 18 e 55 anos, mas em outras faixas etárias o cálculo recebe outras recomendações.
+            </dd>
+        </dl>
+
+        <div id="table">
+            <table class="table table-sm">
+                <thead>
+                    <tr>
+                        <th scope="col">Idade</th>
+                        <th scope="col">Valor de ml por cada kg</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Inferior a 17 anos</td>
+                        <td>40ml</td>
+                    </tr>
+                    <tr>
+                        <td>De 18 a 55 anos</td>
+                        <td>35ml</td>
+                    </tr>
+                    <tr>
+                        <td>De 55 a 65</td>
+                        <td>30ml</td>
+                    </tr>
+                    <tr>
+                        <td>Superior a 66 anos</td>
+                        <td>25ml</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
     </article>
+
+    <footer>
+        <p>
+            Referências: <a
+                href="https://drauziovarella.uol.com.br/alimentacao/5-motivos-para-nao-deixar-de-tomar-agua/#:~:text=A%20quantidade%20de%20%C3%A1gua%20que,Todo%20dia."> Drauzio
+                Varela</a>.
+        </p>
+    </footer>
+    
 
     <script src="main.js"></script>
 </body>
