Header text placed

--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
 <body>
 
     <header>
-        <div>
+        <div class="headlineBtn">
             <a href="https://nickolasedu.github.io/Sua-Saude/">
                 <button>Back</button>
             </a>
+        </div>
+
+        <div class="headlineTxt">
+            <h1>SuaSaude</h1>
         </div>
     </header>
 
